# eidas-verify

./: .gitignore  Cargo.toml  LICENSES.md  README.md
.github/workflows/: ci.yml
crates/eidas-asic/: Cargo.toml
crates/eidas-asic/src/: lib.rs  verify.rs
crates/eidas-asic/tests/: asic_cades.rs  dss_corpus_asic.rs
crates/eidas-cades/: Cargo.toml
crates/eidas-cades/src/: lib.rs  unsigned.rs  verify.rs
crates/eidas-cades/tests/: cades_bt.rs  cades_lt.rs  cades_qualify.rs  dss_corpus_cades.rs
crates/eidas-cms/: Cargo.toml
crates/eidas-cms/src/: attrs.rs  cades.rs  digest.rs  envelope.rs  lib.rs  oids.rs  signature_verify.rs
crates/eidas-cms/tests/: cades_bb.rs  property_cms.rs  wycheproof_primitives.rs
crates/eidas-core/: Cargo.toml
crates/eidas-core/src/: algorithm.rs  error.rs  lib.rs  report.rs  time.rs
crates/eidas-jades/: Cargo.toml
crates/eidas-jades/src/: jws.rs  lib.rs  verify.rs
crates/eidas-jades/tests/: dss_corpus_jades.rs  jades_bb.rs  property_jws.rs
crates/eidas-pades/: Cargo.toml
crates/eidas-pades/src/: lib.rs  scan.rs  verify.rs
crates/eidas-pades/tests/: dss_corpus_pades.rs  pades_bb.rs  property_pdf_scan.rs
crates/eidas-policy/: Cargo.toml
crates/eidas-policy/src/: lib.rs
crates/eidas-policy/tests/: policy_119_312.rs
crates/eidas-qualify/: Cargo.toml
crates/eidas-qualify/src/: engine.rs  lib.rs  qcstatements.rs
crates/eidas-qualify/tests/: dss_corpus_qualify.rs  qualify_tests.rs
crates/eidas-revocation/: Cargo.toml
crates/eidas-revocation/src/: crl.rs  lib.rs  ocsp.rs
crates/eidas-revocation/tests/: crl_tests.rs  dss_corpus_revocation.rs  ocsp_tests.rs
crates/eidas-test-corpus/: Cargo.toml
crates/eidas-test-corpus/src/: lib.rs
crates/eidas-timestamp/: Cargo.toml
crates/eidas-timestamp/src/: lib.rs  oids.rs  tst.rs
crates/eidas-timestamp/tests/: dss_corpus_tst.rs  property_tst.rs  tst_tests.rs
crates/eidas-trust/: Cargo.toml
crates/eidas-trust/src/: lib.rs  model.rs  parse.rs  qualify.rs
crates/eidas-trust/tests/: dss_corpus_tsl.rs  property_tsl.rs  tl_parse.rs
crates/eidas-verify/: Cargo.toml
crates/eidas-verify/examples/: verify.rs
crates/eidas-verify/src/: lib.rs  verifier.rs
crates/eidas-verify/tests/: end_to_end_corpus.rs  online_oracle.rs
crates/eidas-verify/tests/snapshots/: end_to_end_corpus__asic_multifiles_via_facade.snap  end_to_end_corpus__cades_attached_via_facade.snap  end_to_end_corpus__jades_b_full_type_via_facade.snap  end_to_end_corpus__pades_lt_via_facade.snap
crates/eidas-x509/: Cargo.toml
crates/eidas-x509/src/: cert_info.rs  chain.rs  lib.rs
crates/eidas-x509/tests/: chain_tests.rs  pkits_path_validation.rs
crates/eidas-xades/: Cargo.toml
crates/eidas-xades/src/: c14n.rs  lib.rs  parse.rs  verify.rs
crates/eidas-xades/tests/: dss_corpus_xades.rs  xades_bb.rs
docs/: 01-overview.md  02-architecture.md  03-data-flow.md  04-types.md  05-verification-levels.md  06-qualification.md  07-features-and-extension.md  08-security-model.md  09-deferred-work.md  README.md
tests/vectors/: README.md  dss-corpus.sparse
tools/: sync-corpus.sh
