[workspace]
resolver = "3"
members = [
    "crates/eidas-core",
    "crates/eidas-policy",
    "crates/eidas-x509",
    "crates/eidas-cms",
    "crates/eidas-revocation",
    "crates/eidas-timestamp",
    "crates/eidas-cades",
    "crates/eidas-pades",
    "crates/eidas-trust",
    "crates/eidas-qualify",
    "crates/eidas-asic",
    "crates/eidas-jades",
    "crates/eidas-xades",
    "crates/eidas-verify",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gsguglielmo/eidas-verify"
authors = ["eidas-verify contributors"]

[workspace.dependencies]
# Intra-workspace
eidas-core    = { version = "0.1.0", path = "crates/eidas-core" }
eidas-policy  = { version = "0.1.0", path = "crates/eidas-policy" }
eidas-x509    = { version = "0.1.0", path = "crates/eidas-x509" }
eidas-cms        = { version = "0.1.0", path = "crates/eidas-cms" }
eidas-revocation = { version = "0.1.0", path = "crates/eidas-revocation" }
eidas-timestamp  = { version = "0.1.0", path = "crates/eidas-timestamp" }
eidas-cades      = { version = "0.1.0", path = "crates/eidas-cades" }
eidas-pades      = { version = "0.1.0", path = "crates/eidas-pades" }
eidas-trust      = { version = "0.1.0", path = "crates/eidas-trust" }
eidas-qualify    = { version = "0.1.0", path = "crates/eidas-qualify" }
eidas-asic       = { version = "0.1.0", path = "crates/eidas-asic" }
eidas-jades      = { version = "0.1.0", path = "crates/eidas-jades" }
eidas-xades      = { version = "0.1.0", path = "crates/eidas-xades" }

# RustCrypto (stable 0.2/0.7 line — 0.3/0.8 pre-releases deliberately avoided)
x509-cert = { version = "0.2", default-features = false, features = ["std"] }
cms       = { version = "0.2", default-features = false, features = ["std"] }
der       = { version = "0.7", default-features = false, features = ["std", "oid"] }
spki      = { version = "0.7", default-features = false, features = ["std"] }
const-oid = { version = "0.9", features = ["db"] }
signature = { version = "2.2", default-features = false, features = ["std"] }

# Signature verification backends
rsa            = { version = "0.9", default-features = false, features = ["std", "sha2"] }
ecdsa          = { version = "0.16", default-features = false, features = ["std", "verifying", "pkcs8", "der"] }
p256           = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
p384           = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
p521           = { version = "0.13", default-features = false, features = ["std", "ecdsa", "pkcs8"] }
ed25519-dalek  = { version = "2.1", default-features = false, features = ["std"] }

# Hashes
sha2 = { version = "0.10", default-features = false, features = ["std"] }
sha3 = { version = "0.10", default-features = false, features = ["std"] }

# Time + encoding + errors
chrono    = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
base64    = "0.22"
hex       = "0.4"
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
quick-xml = "0.31"

# Dev-only
insta              = { version = "1.40", features = ["yaml"] }
rstest             = "0.21"
proptest           = "1"
pretty_assertions  = "1.4"
hex-literal        = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
# `missing_docs` stays off: every public API is documented at module level;
# per-field doc requirements are out of proportion to their value in a crate
# where most structs are data transfer objects with self-documenting names.

[workspace.lints.clippy]
# During early development we had `pedantic = warn`, which fired ~300 times,
# mostly on style nits (missing backticks in doc comments, missing
# #[must_use] hints, postfix cohesion). The signal-to-noise ratio was bad
# enough that it was ignored, so we dial it back to just the lint groups
# that catch real bugs. Re-enable `pedantic` locally during refactor sprints.
correctness = { level = "deny", priority = -1 }
suspicious = { level = "warn", priority = -1 }
