[package]
name = "eidas-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ETSI TS 119 312 algorithm policy defaults for eidas-verify."

[dependencies]
chrono     = { workspace = true }
eidas-core = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
