[package]
name = "eidas-qualify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "ETSI TS 119 615 qualification engine (AdES / AdES-QC / QES) for eidas-verify."

[dependencies]
chrono     = { workspace = true }
const-oid  = { workspace = true }
der        = { workspace = true }
eidas-core = { workspace = true }
eidas-trust = { workspace = true }
eidas-x509 = { workspace = true }
x509-cert  = { workspace = true }

[dev-dependencies]
base64            = { workspace = true }
pretty_assertions = { workspace = true }
tempfile          = "3"

[lints]
workspace = true
