[package]
name = "eidas-test-corpus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal test-helper crate: locates DSS / PKITS / Wycheproof corpora and loads expectation tables. Not published."
publish = false

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = "0.8"

[features]
default = []
# Each consuming crate enables exactly the corpora it needs.
corpus-dss        = []
corpus-pkits      = []
corpus-wycheproof = []
online-tests      = []

[lints]
workspace = true
