[package]
name = "eidas-timestamp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "RFC 3161 TimeStampToken parsing and verification for eidas-verify."

[dependencies]
chrono       = { workspace = true }
cms          = { workspace = true }
const-oid    = { workspace = true }
der          = { workspace = true }
eidas-core   = { workspace = true }
eidas-cms    = { workspace = true }
eidas-x509   = { workspace = true }
rsa          = { workspace = true }
spki         = { workspace = true }
x509-cert    = { workspace = true }

[dev-dependencies]
base64            = { workspace = true }
eidas-policy      = { workspace = true }
hex               = { workspace = true }
pretty_assertions = { workspace = true }
tempfile          = "3"

[lints]
workspace = true
