[package]
name = "eidas-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Pure-Rust verifier for EU electronic signatures (PAdES, CAdES, XAdES, JAdES, ASiC). Verification only."

[dependencies]
eidas-asic       = { workspace = true, optional = true }
eidas-cades      = { workspace = true, optional = true }
eidas-cms        = { workspace = true, optional = true }
eidas-core       = { workspace = true }
eidas-jades      = { workspace = true, optional = true }
eidas-pades      = { workspace = true, optional = true }
eidas-xades      = { workspace = true, optional = true }
eidas-policy     = { workspace = true }
eidas-revocation = { workspace = true }
eidas-timestamp  = { workspace = true }
eidas-trust      = { workspace = true, optional = true }
eidas-qualify    = { workspace = true, optional = true }
eidas-x509       = { workspace = true }
x509-cert        = { workspace = true }

[dev-dependencies]
base64            = { workspace = true }
chrono            = { workspace = true }
der               = { workspace = true }
eidas-test-corpus = { workspace = true }
eidas-trust       = { workspace = true }
insta             = { workspace = true }
rcgen             = { version = "0.13", default-features = false, features = ["pem", "ring"] }
rstest            = { workspace = true }
serde_json        = { workspace = true }
# Synchronous HTTP client for the optional online tier
# (EIDAS_VERIFY_ONLINE_TESTS=1). Tiny — a couple hundred KB of object
# code, no async runtime. dev-only, never linked in published artefacts.
ureq              = { version = "2", default-features = false, features = ["tls"] }

[features]
default = ["cades", "pades", "asic", "jades", "trust-list", "ts-119-615", "cades-qualify"]
cades = ["dep:eidas-cms", "dep:eidas-cades"]
cades-qualify = ["cades", "ts-119-615", "eidas-cades?/ts-119-615"]
pades = ["cades", "dep:eidas-pades"]
asic = ["cades", "dep:eidas-asic"]
jades = ["dep:eidas-jades"]
xades = ["dep:eidas-xades"]
trust-list = ["dep:eidas-trust"]
ts-119-615 = ["trust-list", "dep:eidas-qualify"]
# Future features: "jades", "xades".

[lints]
workspace = true
